2002-01-02  Jeremy Katz  <katzj@redhat.com>
	
	* stage2/md5.c (md5_password): Ensure the password exists before
	trying to check against the md5 crypted version.

2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage1/stage1.S: Don't call INT 13, AH=48H, because it is
	difficult to call this function with the workaround implemented
	in the previous change due to the size limit of Stage 1.
	
	(lba_mode) [NO_BUGGY_BIOS_IN_THE_WORLD]: Don't check the
	geometry explicitly. This shouldn't be harmful, as INT 13,
	AH=42H should take care of it, and if you cannot read Stage 2
	even with LBA because of a geometry problem, you can never read
	it.

	* stage2/start.S (lba_mode) [NO_BUGGY_BIOS_IN_THE_WORLD]:
	Likewise.
	
2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/bios.c (get_diskinfo): Clear out the structure DRP
	before calling get_diskinfo_int13_extensions, because the Ralf
	Brown's Interrupt List says that Dell machines using PhoenixBIOS
	4.0 Release 6.0 fail, if DRP.FLAGS is not zero. Setting the
	entire structure to zero may be overkill, but it should be safe.
	
	* stage2/char_io.c [STAGE1_5] (grub_memset): Defined.
	
2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>

	From John Goerzen <jgoerzen@complete.org>:
	* util/grub-install.in (convert): Added NetBSD support.
	
2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>

	* util/grub-install.in: Set GRUB_PREFIX and BOOTDIR to "/grub"
	and "${rootdir}" respectively in NetBSD.
	
2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/builtins.c (builtin_geometry): Add extra space
	characters into the long description.
	(builtin_kernel): Likewise.
	(builtin_vbeprobe): Likewise.
	
2001-12-19  Yoshinori K. Okuji  <okuji@gnu.org>

	From Michael Sullivan <mike@trdlnk.com>:
	* stage1/stage1.S (real_start): Added a workaround for AST BIOS,
	because it clobbers %dl with INT 13, AH=41H.

2001-12-19  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/fsys_fat.c (fat_read): Fix the contradictory comment.